sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:12: error: ';' expected but integer literal found.
        }fait1 +=1
                 ^